responsive: fix list image not showing up, due to border-box issue on firefow, fix by adding js

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,16 @@
  *= require_self
  *= require home
  */
+/*RESET*/
+html,body,div,ul,ol,li,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,fieldset,input,hr {margin:0; padding:0;}
+h1,h2,h3,h4,h5,h6,pre,code,address,caption,cite,code,em,strong,th {font-size:1em; font-weight:normal; font-style:normal;}
+ul,ol {list-style:none;}
+fieldset,img,hr {border:none;}
+caption,th {text-align:left;}
+table {border-collapse:collapse; border-spacing:0;}
+td {vertical-align:top;}
+
+
 
 
 
@@ -1245,15 +1255,35 @@ and (max-width : 480px)	{
 		margin: auto;
 		/*overflow: hidden;*/
 		float:none;
+		display: block;
 	}
+	
 	.product-image {
-		width: auto;
+		position: relative;
+		/*display: block;*/
 		padding-bottom: 100%;
 		height: 0;
+		/*overflow: hidden;*/
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: auto;
 	}	
 	.product-image img {
+		display: block;
+		position: relative;
 		height: 100%;
-	/*	width: auto;
+		width: auto;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+    box-sizing: border-box;
+    top:0;
+    bottom: 0;
+		/*padding-bottom: 100%;*/
+
+		/*width: 100%;*/
+
+	/*width: auto;
 		padding-bottom: 100%;
 		height: 0;*/
 		margin-bottom:20px; 
@@ -1326,3 +1356,4 @@ and (max-width : 480px)	{
 	.orderPage{width: auto;}
 	.orderSummary, .orderInfo{ margin:10px 0;}
 }
+
